# Ed448-Goldilocks

./: .gitignore  Cargo.toml  readme.md
src/: constants.rs  lib.rs  macros.rs
src/curve/: constants.rs  mod.rs  readme.md
src/curve/edwards/: affine.rs  extended.rs  extensible.rs  mod.rs  projective.rs
src/curve/montgomery/: mod.rs  montgomery.rs  readme.md
src/curve/scalar_mul/: double_and_add.rs  double_base.rs  mod.rs  signed_multi_comb.rs  variable_base.rs
src/curve/scalar_mul/window/: mod.rs
src/curve/scalar_mul/window/wnaf/: mod.rs
src/curve/twedwards/: affine.rs  extended.rs  extensible.rs  projective.rs
src/decaf/: constants.rs  decaf.rs  mod.rs  ops.rs
src/field/: mod.rs  readme.md  scalar.rs
src/field/base/: fq.rs  karatsuba.rs  limb28.rs  mod.rs
src/field/fiat_u64/: constants.rs  mod.rs  prime_field.rs
src/field/scalar/: constants.rs  mod.rs  scalar.rs
src/field/u32/: constants.rs  fq.rs  karatsuba.rs  mod.rs  prime_field.rs  scalar.rs
src/ristretto/: mod.rs  readme.md  ristretto.rs
src/window/: mod.rs
src/window/wnaf/: mod.rs
