[package]
name = "ed448"
version = "0.1.0"
authors = ["Kevaundray Wedderburn <kevtheappdev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subtle = "2.2.2"
hex = "0.4"


[features]
default = ["u32_backend"]

u32_backend = []