[package]
name = "ed448"
version = "0.2.0"
authors = ["Kevaundray Wedderburn <kevtheappdev@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/crate-crypto/Curve448"
homepage = "https://github.com/crate-crypto/Curve448"
documentation = "https://github.com/crate-crypto/Curve448"
categories = ["cryptography"]
keywords = ["cryptography", "crypto", "decaf", "ed448", "ed448-goldilocks",]
description = "A pure-Rust implementation of Ed448 and Curve448 and Decaf"
exclude = [
    ".gitignore",
    ".github/*"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subtle = "2.2.2"
hex = "0.4"


[features]
default = ["u32_backend"]

u32_backend = []