[package]
name = "ed448-goldilocks"
version = "0.9.0"
authors = ["Kevaundray Wedderburn <kevtheappdev@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/crate-crypto/Ed448-Goldilocks"
homepage = "https://github.com/crate-crypto/Ed448-Goldilocks"
documentation = "https://github.com/crate-crypto/Ed448-Goldilocks"
categories = ["cryptography"]
keywords = ["cryptography", "crypto", "decaf", "ed448", "ed448-goldilocks"]
description = "A pure-Rust implementation of Ed448 and Curve448 and Decaf"
exclude = [".gitignore", ".github/*"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subtle = "2.2.2"
rand_core = { version = "0.6", optional = true }
fiat-crypto = { version = "0.1.4", optional = true }

[dependencies.zeroize]
version = "1"
default-features = false
features = ["zeroize_derive"]
optional = true

[features]
default = ["fiat_u64_backend"]
fiat_u64_backend = ["fiat-crypto"]
u32_backend = []
rand = ["rand_core"]

[dev-dependencies]
hex-literal = "0.4"
